base.core/src/main/java/eapli/base/antlr/formulario/ValidacaoFormParser.java
// Generated from C:/lei20_21_s4_2di_02/base.core/src/main/java/eapli/base/antlr/formulario\ValidacaoForm.g4 by ANTLR 4.9.1
package eapli.base.antlr.formulario;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValidacaoFormParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, NUM=19, OPERADOR_BOOL=20, MUL_DIV=21, SOMA_SUB=22, ATRIBUTO=23, 
		STRING=24, WS=25, ERR_CHAR=26;
	public static final int
		RULE_start = 0, RULE_form = 1, RULE_instrucao_form = 2, RULE_cond_verificacao = 3, 
		RULE_validacoes = 4, RULE_validacao = 5, RULE_operacoes_logicas = 6, RULE_funcao_bool = 7, 
		RULE_operacao_bool = 8, RULE_inteiro = 9, RULE_atributo = 10, RULE_regex = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "form", "instrucao_form", "cond_verificacao", "validacoes", 
			"validacao", "operacoes_logicas", "funcao_bool", "operacao_bool", "inteiro", 
			"atributo", "regex"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'form'", "'{'", "'}'", "';'", "'->'", "'AND'", "'OR'", "'['", 
			"']'", "'isEmpty'", "'('", "')'", "'isNotEmpty'", "'match'", "','", "'notMatch'", 
			"'str'", "'length'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "NUM", "OPERADOR_BOOL", "MUL_DIV", 
			"SOMA_SUB", "ATRIBUTO", "STRING", "WS", "ERR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ValidacaoForm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ValidacaoFormParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EndResultContext extends StartContext {
		public FormContext finalResult;
		public TerminalNode EOF() { return getToken(ValidacaoFormParser.EOF, 0); }
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public EndResultContext(StartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterEndResult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitEndResult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitEndResult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			_localctx = new EndResultContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(T__0);
			setState(25);
			match(T__1);
			setState(26);
			((EndResultContext)_localctx).finalResult = form(0);
			setState(27);
			match(T__2);
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
	 
		public FormContext() { }
		public void copyFrom(FormContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InstContext extends FormContext {
		public Instrucao_formContext verif;
		public Instrucao_formContext instrucao_form() {
			return getRuleContext(Instrucao_formContext.class,0);
		}
		public InstContext(FormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitInst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstRecContext extends FormContext {
		public Instrucao_formContext verif;
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public Instrucao_formContext instrucao_form() {
			return getRuleContext(Instrucao_formContext.class,0);
		}
		public InstRecContext(FormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterInstRec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitInstRec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitInstRec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		return form(0);
	}

	private FormContext form(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FormContext _localctx = new FormContext(_ctx, _parentState);
		FormContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_form, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new InstContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(31);
			((InstContext)_localctx).verif = instrucao_form();
			setState(32);
			match(T__3);
			}
			_ctx.stop = _input.LT(-1);
			setState(40);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new InstRecContext(new FormContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_form);
					setState(34);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(35);
					((InstRecContext)_localctx).verif = instrucao_form();
					setState(36);
					match(T__3);
					}
					} 
				}
				setState(42);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Instrucao_formContext extends ParserRuleContext {
		public Instrucao_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucao_form; }
	 
		public Instrucao_formContext() { }
		public void copyFrom(Instrucao_formContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OpVerifyInstrucaoFormContext extends Instrucao_formContext {
		public Cond_verificacaoContext condicao;
		public ValidacoesContext valid;
		public Cond_verificacaoContext cond_verificacao() {
			return getRuleContext(Cond_verificacaoContext.class,0);
		}
		public ValidacoesContext validacoes() {
			return getRuleContext(ValidacoesContext.class,0);
		}
		public OpVerifyInstrucaoFormContext(Instrucao_formContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpVerifyInstrucaoForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpVerifyInstrucaoForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpVerifyInstrucaoForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instrucao_formContext instrucao_form() throws RecognitionException {
		Instrucao_formContext _localctx = new Instrucao_formContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucao_form);
		try {
			_localctx = new OpVerifyInstrucaoFormContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			((OpVerifyInstrucaoFormContext)_localctx).condicao = cond_verificacao(0);
			setState(44);
			match(T__4);
			setState(45);
			((OpVerifyInstrucaoFormContext)_localctx).valid = validacoes(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cond_verificacaoContext extends ParserRuleContext {
		public Cond_verificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_verificacao; }
	 
		public Cond_verificacaoContext() { }
		public void copyFrom(Cond_verificacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OpAndVerifContext extends Cond_verificacaoContext {
		public Cond_verificacaoContext left;
		public Cond_verificacaoContext right;
		public List<Cond_verificacaoContext> cond_verificacao() {
			return getRuleContexts(Cond_verificacaoContext.class);
		}
		public Cond_verificacaoContext cond_verificacao(int i) {
			return getRuleContext(Cond_verificacaoContext.class,i);
		}
		public OpAndVerifContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpAndVerif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpAndVerif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpAndVerif(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpBoolVerifContext extends Cond_verificacaoContext {
		public Operacao_boolContext opBoolStack;
		public Operacao_boolContext operacao_bool() {
			return getRuleContext(Operacao_boolContext.class,0);
		}
		public OpBoolVerifContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpBoolVerif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpBoolVerif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpBoolVerif(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpOrVerifContext extends Cond_verificacaoContext {
		public Cond_verificacaoContext left;
		public Cond_verificacaoContext right;
		public List<Cond_verificacaoContext> cond_verificacao() {
			return getRuleContexts(Cond_verificacaoContext.class);
		}
		public Cond_verificacaoContext cond_verificacao(int i) {
			return getRuleContext(Cond_verificacaoContext.class,i);
		}
		public OpOrVerifContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpOrVerif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpOrVerif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpOrVerif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cond_verificacaoContext cond_verificacao() throws RecognitionException {
		return cond_verificacao(0);
	}

	private Cond_verificacaoContext cond_verificacao(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Cond_verificacaoContext _localctx = new Cond_verificacaoContext(_ctx, _parentState);
		Cond_verificacaoContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_cond_verificacao, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new OpBoolVerifContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(48);
			((OpBoolVerifContext)_localctx).opBoolStack = operacao_bool(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(56);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new OpAndVerifContext(new Cond_verificacaoContext(_parentctx, _parentState));
						((OpAndVerifContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cond_verificacao);
						setState(50);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(51);
						match(T__5);
						setState(52);
						((OpAndVerifContext)_localctx).right = cond_verificacao(4);
						}
						break;
					case 2:
						{
						_localctx = new OpOrVerifContext(new Cond_verificacaoContext(_parentctx, _parentState));
						((OpOrVerifContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cond_verificacao);
						setState(53);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(54);
						match(T__6);
						setState(55);
						((OpOrVerifContext)_localctx).right = cond_verificacao(3);
						}
						break;
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ValidacoesContext extends ParserRuleContext {
		public ValidacoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validacoes; }
	 
		public ValidacoesContext() { }
		public void copyFrom(ValidacoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OpValidContext extends ValidacoesContext {
		public ValidacaoContext logicStack;
		public ValidacaoContext validacao() {
			return getRuleContext(ValidacaoContext.class,0);
		}
		public OpValidContext(ValidacoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpValid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpValid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpValid(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpValidRecContext extends ValidacoesContext {
		public ValidacoesContext validStack;
		public ValidacaoContext logicStack;
		public ValidacoesContext validacoes() {
			return getRuleContext(ValidacoesContext.class,0);
		}
		public ValidacaoContext validacao() {
			return getRuleContext(ValidacaoContext.class,0);
		}
		public OpValidRecContext(ValidacoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpValidRec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpValidRec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpValidRec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValidacoesContext validacoes() throws RecognitionException {
		return validacoes(0);
	}

	private ValidacoesContext validacoes(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ValidacoesContext _localctx = new ValidacoesContext(_ctx, _parentState);
		ValidacoesContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_validacoes, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new OpValidContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(62);
			((OpValidContext)_localctx).logicStack = validacao();
			}
			_ctx.stop = _input.LT(-1);
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OpValidRecContext(new ValidacoesContext(_parentctx, _parentState));
					((OpValidRecContext)_localctx).validStack = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_validacoes);
					setState(64);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(65);
					((OpValidRecContext)_localctx).logicStack = validacao();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ValidacaoContext extends ParserRuleContext {
		public Operacoes_logicasContext operacoes_logicas() {
			return getRuleContext(Operacoes_logicasContext.class,0);
		}
		public ValidacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterValidacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitValidacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitValidacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValidacaoContext validacao() throws RecognitionException {
		ValidacaoContext _localctx = new ValidacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_validacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__7);
			setState(72);
			operacoes_logicas(0);
			setState(73);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacoes_logicasContext extends ParserRuleContext {
		public Operacoes_logicasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacoes_logicas; }
	 
		public Operacoes_logicasContext() { }
		public void copyFrom(Operacoes_logicasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InstFormContext extends Operacoes_logicasContext {
		public Instrucao_formContext instrucao_form() {
			return getRuleContext(Instrucao_formContext.class,0);
		}
		public InstFormContext(Operacoes_logicasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterInstForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitInstForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitInstForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpAndLogicContext extends Operacoes_logicasContext {
		public Operacoes_logicasContext left;
		public Operacoes_logicasContext right;
		public List<Operacoes_logicasContext> operacoes_logicas() {
			return getRuleContexts(Operacoes_logicasContext.class);
		}
		public Operacoes_logicasContext operacoes_logicas(int i) {
			return getRuleContext(Operacoes_logicasContext.class,i);
		}
		public OpAndLogicContext(Operacoes_logicasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpAndLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpAndLogic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpAndLogic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncBoolContext extends Operacoes_logicasContext {
		public Funcao_boolContext funcao_bool() {
			return getRuleContext(Funcao_boolContext.class,0);
		}
		public FuncBoolContext(Operacoes_logicasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterFuncBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitFuncBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitFuncBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpBoolLogicContext extends Operacoes_logicasContext {
		public Operacao_boolContext opBoolStack;
		public Operacao_boolContext operacao_bool() {
			return getRuleContext(Operacao_boolContext.class,0);
		}
		public OpBoolLogicContext(Operacoes_logicasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpBoolLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpBoolLogic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpBoolLogic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpOrLogicContext extends Operacoes_logicasContext {
		public Operacoes_logicasContext left;
		public Operacoes_logicasContext right;
		public List<Operacoes_logicasContext> operacoes_logicas() {
			return getRuleContexts(Operacoes_logicasContext.class);
		}
		public Operacoes_logicasContext operacoes_logicas(int i) {
			return getRuleContext(Operacoes_logicasContext.class,i);
		}
		public OpOrLogicContext(Operacoes_logicasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).enterOpOrLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidacaoFormListener ) ((ValidacaoFormListener)listener).exitOpOrLogic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidacaoFormVisitor ) return ((ValidacaoFormVisitor<? extends T>)visitor).visitOpOrLogic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operacoes_logicasContext operacoes_logicas() throws RecognitionException {
		return operacoes_logicas(0);
	}

	private Operacoes_logicasContext operacoes_logicas(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Operacoes_logicasContext _localctx = new Operacoes_logicasContext(_ctx, _parentState);
		Operacoes_logicasContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_operacoes_logicas, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new OpBoolLogicContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
